# kekw_db

./: .gitignore  Cargo.toml
migrations/2020-10-10-181716_create_movies/: down.sql  up.sql
migrations/2021-02-14-230917_add_vote_message/: down.sql  up.sql
src/: lib.rs  periods.rs  rolls.rs  schema.rs  submissions.rs
src/models/: mod.rs  period.rs  roll.rs  submission.rs
