[package]
name = "kekw_db"
version = "0.1.0"
authors = ["tuckerthomas <tuckerthomas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres", "r2d2", "numeric"] }
diesel_migrations = { version = "1.4", features = ["postgres"] }
chrono = { version = "0.4"}
serde = { version = "1"}
serde_json = { version = "1" }